--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.122.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
     "openai>=2.8.1",
     "python-dotenv>=1.2.1",
+    "uvicorn>=0.38.0",
 ]
